# minimon-applet

./: .gitignore  Cargo.toml  README.md  io.cosmicUtils.cosmicAppletMinimon.json  io.github.cosmicUtils.cosmicAppletMinimon.json  io.github.cosmic_utils.minimon-applet.json  justfile
.github/: FUNDING.YML
i18n/ar/: cosmic_applet_minimon.ftl
i18n/bg/: cosmic_applet_minimon.ftl
i18n/da/: cosmic_applet_minimon.ftl
i18n/en/: Minimon.ftl  cosmic_applet_minimon.ftl
i18n/es/: cosmic_applet_minimon.ftl
i18n/fr/: cosmic_applet_minimon.ftl
i18n/hu/: cosmic_applet_minimon.ftl
i18n/nl/: cosmic_applet_minimon.ftl
i18n/pl/: cosmic_applet_minimon.ftl
i18n/pt-BR/: cosmic_applet_minimon.ftl
i18n/sv/: cosmic_applet_minimon.ftl
i18n/zh-CN/: cosmic_applet_minimon.ftl
res/: com.github.hyperchaotic.Minimon.desktop  com.github.hyperchaotic.Minimon.metainfo.xml  com.github.hyperchaotic.cosmic-applet-minimon.desktop  com.github.hyperchaotic.cosmic-applet-minimon.metainfo.xml  io.github.cosmic-utils.cosmic-applet-minimon.desktop  io.github.cosmic-utils.cosmic-applet-minimon.metainfo.xml  io.github.cosmicUtils.cosmicAppletMinimon.desktop  io.github.cosmicUtils.cosmicAppletMinimon.metainfo.xml  io.github.cosmic_utils.minimon-applet.desktop  io.github.cosmic_utils.minimon-applet.metainfo.xml
src/: app.rs  barchart.rs  colorpicker.rs  config.rs  i18n.rs  main.rs  netmon.rs  sleepinhibitor.rs  svg_graph.rs  svgstat.rs  system_monitors.rs
src/charts/: heat.rs  line.rs  mod.rs  ring.rs
src/sensors/: cpu.rs  cputemp.rs  disks.rs  gpus.rs  memory.rs  mod.rs  network.rs
src/sensors/gpu/: amd.rs  intel.rs  mod.rs  nvidia.rs
