[package]
name = "cosmic-applet-minimon"
version = "0.4.2"
edition = "2021"
license = "GPL-3.0"

[profile.release]
lto = "thin"
opt-level = 3
debug = false

[dependencies]
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
rust-embed = "8.3.0"
tokio = { version = "1.36.0", features = ["time"] }
sysinfo = "0.34"
serde = "1.0.197"
lazy_static = "1.5"
nvml-wrapper = "0.10.0"
log = "0.4.27"
env_logger = "0.10"
anyhow = { version = "1.0.97", features = ["backtrace"] }
zbus = { version = "3"}
zvariant = "3"
fern = "0.7"
chrono = "0.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland", "applet-token"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
