[package]
name = "cosmic-applet-minimon"
version = "0.4.3"
edition = "2024"
license = "GPL-3.0"

[profile.release]
lto = "thin"
opt-level = 3
debug = false

[dependencies]
i18n-embed-fl = "0.8"
rust-embed = "8.3.0"
sysinfo = "0.34"
serde = "1.0.197"
nvml-wrapper = "0.10.0"
log = "0.4.27"
anyhow = { version = "1.0.97", features = ["backtrace"] }
zbus = { version = "3" }
zvariant = "3"
fern = "0.7"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "applet-token"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
