[package]
name = "cosmic-applet-minimon"
version = "0.5.2"
edition = "2024"
license = "GPL-3.0"

[features]
default = []
caffeine = []
lyon_charts = []

[profile.release]
lto = "thin"
opt-level = 3
debug = false

[dependencies]
systemd-journal-logger = "2.2"
i18n-embed-fl = "0.8"
rust-embed = "8.3.0"
sysinfo = "0.34"
serde = "1.0.197"
nvml-wrapper = "0.10.0"
log = "0.4.27"
anyhow = { version = "1.0.97", features = ["backtrace"] }
zbus = { version = "5" }
zvariant = "5"
fern = "0.7"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "applet-token"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }